--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,15 @@ dist/
 *.ipr
 *.directory
 *.retry
+*.pnp
+*.pnp.js
+
+# testing
+coverage/
+
+# misc
+*.DS_Store
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
