--- a/user-service/user-service-common/build.gradle
+++ b/user-service/user-service-common/build.gradle
@@ -16,6 +16,7 @@ jar {
 
 
 dependencies {
+    compile("javax.validation:validation-api:${versions.'validation-api'}")
     compileOnly("org.projectlombok:lombok:${versions.'lombok'}")
     annotationProcessor("org.projectlombok:lombok:${versions.'lombok'}")
 }
