--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
 rootProject.name = 'treez'
 
-include "react-ui"
+include "frontend"
 
 include "user-service"
 include "user-service:user-service-common"
